# adventofcode2025

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/: day01.py  day02.py
tests/src/: day01.py
